--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ body {
 
 
 /* Responsive for mobile */
-@media (max-width: 430px) {
+@media (max-width: 620px) {
   .nav-links {
     display: none;
     position: absolute;
@@ -280,12 +280,16 @@ body {
 
 
 
-@media (max-width: 430px) {
+@media (max-width: 620px) {
 
   .floating-books {
     display: none;
   }
-
+  .floating-books .img1,.img2{
+    display: none;
+    width: 0;
+    height: 0;
+  }
 
 
   .quote {
