fixed navbar and favicon

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,12 @@ body {
   justify-content: space-between;
   background-color: #000000;
   height: 10vh;
+  width: 100%;
   padding: 10px 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 888;
 
 }
 
@@ -66,7 +71,7 @@ body {
 /*Hero section*/
 .hero1 {
   width: 100%;
-  height: 77vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -284,7 +289,9 @@ body {
   .floating-books {
     display: none;
   }
-  .floating-books .img1,.img2{
+
+  .floating-books .img1,
+  .img2 {
     display: none;
     width: 0;
     height: 0;
@@ -292,8 +299,8 @@ body {
 
 
   .quote {
-   
-    font-size: 0.68rem;
+
+    font-size: 0.8rem;
     padding: 0.5rem 1.5rem;
     max-width: 21rem;
   }
@@ -312,7 +319,7 @@ body {
 
 /* Optimized about us section */
 .about {
-  padding: 80px 20px;
+  padding: 0px 20px;
   background-color: #f9f9f9;
   scroll-margin-top: 60px;
   /* margin-top: 20px; */
@@ -596,11 +603,11 @@ body {
   }
 }
 
- #map-section iframe {
+#map-section iframe {
   width: 100%;
   height: 450px;
   border: 0;
-} 
+}
 
 @media (max-width: 600px) {
   #map-section iframe {
@@ -717,18 +724,37 @@ button[type="submit"]:hover {
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes fadeInDown {
-  from { opacity: 0; transform: translateY(-20px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media (max-width: 768px) {
